Sun Oct 28 11:56:33 2001  George Lebl <jirka@5z.com>

	* daemon/auth.c, daemon/misc.[ch], daemon/xdmcp.[ch]: be more
	  thorough in setting up address/cookie pairs for local servers,
	  and make sure to always setup localhost.localdomain and
	  loopback.  Don't use hostname based lookup on local servers,
	  but use the same code we use for xdmcp peeking local addresses.
	  This will make it possible to start an X server and login
	  even if the hostname is out of whack.

Sun Oct 28 10:46:21 2001  Christophe Merlet <redfox@eikonex.org>

	* gui/gdmXnestchooser.c: corrected just a little typo.

Sat Oct 27 21:44:20 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c, daemon/verify-*.c: put the sleep day in the verify	
	  code, and in pam verification use the pam sleep to do the same
	  if available.  This means that the error will come after the sleep
	  but that the sleep will be 1) random 2) not doubled with both the
	  gdm and the pam sleep.  Second always print the "Please enter your
	  username" message on the verify not just the first time.

Sat Oct 27 14:56:47 2001  George Lebl <jirka@5z.com>

	* configure.in: raise version to 2.2.5.1

	* daemon/errorgui.[ch], daemon/gdm.c: add yesno error dialog

	* daemon/auth.[ch], daemon/slave.c: allow logins without a home
	  dir (it will be set to '/') but only after properly warning the
	  user about it, and asking him if he wants to continue.

Sat Oct 27 13:22:48 2001  George Lebl <jirka@5z.com>

	* daemon/verify-*.c, daemon/slave.c, daemon/gdm.h, gui/gdmlogin.c:
	  Make pam errors and such pop up in a dialog box to make sure
	  the user notices them.  If the login gets a QUIT and it had some
	  informative messages to tell the user but there was no prompt
	  in between (that is, the user hasn't read them), display it in
	  a dialog.

	* daemon/gdmlogin.c: fix focus after uniconify

Fri Oct 26 01:01:53 2001  George Lebl <jirka@5z.com>

	* config/Gnome.in: run ssh-agent if available, also remove some