@@ -1,3 +1,9 @@
+Sun Oct 28 12:15:50 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c: when the server refuses to be started, some error
+	  in the start code.  Tell the user that we have no clue what's
+	  happening and give up.
+
 Sun Oct 28 11:56:33 2001  George Lebl <jirka@5z.com>
 
 	* daemon/auth.c, daemon/misc.[ch], daemon/xdmcp.[ch]: be more
